dynamic cards and play buttons

--- a/index.html
+++ b/index.html
@@ -58,10 +58,18 @@
     </div>
   </section>
 
-  <footer>
-    <h4 style="color: white;">2024 @rios_rafael</h4>
-  </footer>
+  <br>
+
+  <div class="play">
+    <a href="" class="playbutton">Play Calculator</a>
+    <a href="" class="playbutton">Play Snake Game</a>
+    <a href="" class="playbutton">Play Dudinha Game</a>
+  </div>
 
 </body>
+
+<footer>
+  <h4 style="color: white;">2024 @rios_rafael</h4>
+</footer>
 
 </html>
